--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,3 +1,8 @@
-
-<p>Heros Component</p>
-{{hero}}  is a variable and {{myVariable}}  is another
+<h2>{{ hero.name | uppercase }} Details</h2>
+<div><span>id: </span>{{hero.id}}</div>
+<div>
+  <label>
+    name:
+    <input [(ngModel)]="hero.name" placeholder="name">
+  </label>
+</div>
